create html and css starting layout

--- a/index.html
+++ b/index.html
@@ -2,10 +2,65 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="style.css" />
-        <title>My Personal Website</title>
+        <title>Just Vicky* Things</title>
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <header>
+            <h1>Just Vicky<a href="#asterisknote">*</a> Things</h1>
+        </header>
+        <div id="mainContent">
+            <div id="intro">
+                <!--Full width of window content area-->
+                <div id="introPic">
+                    <!--Maybe insert image slideshow here-->
+                    <img src="https://placebear.com/800/400">
+                </div>
+                <div id="introContent">
+                    <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, quod."</p>
+                </div>
+            </div>
+            <div id="sectionOne">
+                <div id="firstImage">
+                    <!--First image on left third-->
+                    <img src="https://placebear.com/200/300">
+                </div>
+                <div id="firstInfo">
+                    <!--First info section-->
+                    <h3>Lorem ipsum dolor sit.</h3>
+                    <ul>
+                        <li>asdf</li>
+                        <li>asdf</li>
+                        <li>asdf</li>
+                        <li>asdf</li>
+                        <li>asdf</li>
+                    </ul>
+                </div>
+            </div>
+            <div id="sectionTwo">
+                <div id="secondInfo">
+                    <!--Second info section-->
+                    <h3>Lorem ipsum dolor sit.</h3>
+                    <ul>
+                        <li>asdf</li>
+                        <li>asdf</li>
+                        <li>asdf</li>
+                        <li>asdf</li>
+                        <li>asdf</li>
+                    </ul>
+                </div>
+                <div id="secondImage">
+                    <!--Second image on right third-->
+                    <img src="https://placebear.com/200/300">
+                </div>
+            </div>
+        </div>
+        <footer id="asterisknote">
+            <p><small>*Not short for Victoria</small></p>
+        </footer>
+        
+        <a href="https://www.youtube.com" target="_blank" rel=”noopener noreferrer”>Link Here</a>
         <script src="script.js"></script>
+
+        <div id="bottomEmptySpace"></div>
     </body>
 </html>
